# Olive-pest-detectior

./: .gitignore  README.md  pyproject.toml
code/analysis/: results_viz.ipynb
code/data_preparation/: create_classification_dataset.py
code/experiments/: FSOD.ipynb  classification.ipynb
results/classification/: full_accuracy_summary.csv
results/object_detection/Full_Finetune_FasterRCNN/: results.json
results/object_detection/TFA_cos_FasterRCNN_scale20/: results.json
results/object_detection/TFA_fc_FasterRCNN/: results.json
results/object_detection/TFA_fc_FasterRCNN_Augmented/: results.json
