[project]
name = "olive-pest-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "pycocotools>=2.0.10",
    "pytorch-lightning>=2.5.1.post0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
